[tool.poetry]
name = "numpy-ros"
version = "0.1.0"
description = "Seamlessly convert between ROS messages and NumPy arrays."
authors = ["Lucas Wolf <iamlucaswolf@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6, <3.10"
numpy = "^1.19.5"
numpy-quaternion = "^2021.4.5"
numba = {version = "^0.53.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
vermin = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
